--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
   padding: 0 1rem;
   border-radius: 20px;
   height: 60vh;
+  min-width: 250px;
   max-height: 500px;
   box-shadow: 2px 3px 7px 0 cyan;
 }
